name:                bird-combinators
version:             0.1.0.0
synopsis:            Combinators for making point-free functions
description:         This combinators capture common patterns
    of argument distribution's over bodies in function definition's.
    That makes easier to define functions with point-free bodies
    which are better suited for equational reasoning. Some definitions
    are taken from "Thinking functionally with Haskell" by Richard Bird.
homepage:            https://github.com/lamg/bird-combinators
license:             BSD3
license-file:        LICENSE
author:              Luis Ángel Méndez Gort
maintainer:          Luis Ángel Méndez Gort<gort.andres000@gmail.com>
copyright:           2016, Luis Ángel Méndez Gort
category:            Control
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Control.Combinators
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.9 && <4.10
  hs-source-dirs:      src
  default-language:    Haskell2010